test/fail/warn-help.mo
//MOC-FLAG -E=M0194,M0089,M0222,M0155
// NOTE:     ^ this format is necessary because of the way the flags are parsed in run.sh
//MOC-FLAG -A M0218,M0222
//MOC-FLAG -W M0155
//MOC-FLAG --warn-help
